Added CSS styling as part of CSS Foundations - the Cascade

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagne.html">Lasagne</a></li>
-        <li><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a></li>
-        <li><a href="recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
-    </ul>
+    <header class="flex-col">
+        <h1>Odin Recipes</h1>
+        <div>
+            <p>This was created to test various parts of CSS as part of an <a href="https://www.theodinproject.com/lessons/foundations-the-cascade#assignment" target="_blank" ref="noreferrer">assignment</a> in the Odin Project.
+            There is styling on the Lasagne recipe, but none on the other two as part of the original recipe <a href="https://www.theodinproject.com/lessons/foundations-recipes#assignment" target="_blank" ref="noreferrer">assignment</a>.</p>
+        </div>
+        <nav>
+            <ol>
+                <li><a href="recipes/lasagne.html">Lasagne</a></li>
+                <li><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a></li>
+                <li><a href="recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
+            </ol>
+        </nav>
+    </header>
 </body>
 </html>
