--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -3,56 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Lasagne</title>
 </head>
 <body>
-    <a href="../index.html">Return to all recipes</a>
-    <h1>Lasagne</h1>
-    <img src="https://ichef.bbci.co.uk/food/ic/food_16x9_1600/recipes/mary_berrys_lasagne_al_16923_16x9.jpg" alt="A photograph of Lasagne" height="200">
-    <h2>Description</h2>
-        <p>This is Mary's classic lasagne recipe which has been perfected over the years. For the best results leave the lasagne to stand for six hours before cooking.</p>
-    <h2>Ingredients</h2>
-        <h3>For the ragu</h3>
-            <ul>
-                <li>2 tbsp olive oil</li>
-                <li>900g/2lb beef mince</li>
-                <li>2 onions, roughly chopped</li>
-                <li>4 sticks celery, diced (optional)</li>
-                <li>2 garlic cloves, crushed</li>
-                <li>2 level tbsp plain flour</li>
-                <li>150ml/¼ pint beef stock</li>
-                <li>1 tbsp redcurrant jelly (optional) or 1 tsp caster sugar</li>
-                <li>3 tbsp tomato purée</li>
-                <li>1 tbsp chopped thyme</li>
-                <li>2 x 400g tins chopped tomatoes</li>
-            </ul>
-        <h3>For the white sauce</h3>
-            <ul>
-                <li>50g/2oz butter</li>
-                <li>50g/2oz plain flour</li>
-                <li>750ml/1¼ pints hot milk</li>
-                <li>2 tsp Dijon mustard</li>
-                <li>50g/2oz Parmesan, finely grated</li>
-                <li>salt and freshly ground black pepper</li>
-            </ul>
-        <h3>For the lasagne</h3>
-            <ul>
-                <li>12 lasagne sheets</li>
-                <li>75g/3oz mature cheddar, grated</li>
-            </ul>
-    <h2>Method</h2>
-    <ol>
-        <li>Preheat the oven to160C/140C Fan/Gas 3.</li>
-        <li>For the ragu, heat a large frying pan until hot and add the oil. Cook the mince until browned all over. Remove from the heat and transfer to a plate.</li>
-        <li>Add the onion, celery (if using) and garlic to the pan and cook until softened. Return the meat to the pan and stir in the flour. Add the stock and bring to the boil. Add the redcurrant jelly (or sugar), tomato purée and thyme, then stir well.</li>
-        <li>Stir in the tinned tomatoes. Bring to the boil again, cover and simmer in the oven for 1–½ hours, or until the beef is tender.</li>
-        <li>For the white sauce, melt the butter in a saucepan. Add the flour and cook over the heat for one minute. Gradually whisk in the hot milk, whisking until thickened. Add the Dijon mustard and parmesan cheese and season well with salt and pepper.</li>
-        <li>For the lasagne, put one third of the meat sauce in the base of a 2.3 litre/4 pint shallow ovenproof dish. Spoon one third of the white sauce on top. Season with salt and pepper. Arrange one layer of lasagne sheets on top.</li>
-        <li>Spoon half of the remaining meat sauce on top and then half of the white sauce. Season with salt and pepper. Put another layer of lasagne sheets on top, then the remaining meat sauce and remaining white sauce. Sprinkle over the cheddar.</li>
-        <li>Leave for 6 hours before cooking so that the pasta can start to soften.</li>
-        <li>Preheat the oven to 200C/180C Fan/Gas 6.</li>
-        <li>Cook in the middle of the oven for about 45 minutes – or until golden brown on top, bubbling around the edges and the pasta is soft.</li>
-    </ol>
-    <p><em>Source:</em> <a href="https://www.bbc.co.uk/food/recipes/mary_berrys_lasagne_al_16923" target="_blank" rel="noreferrer">Mary Berry’s lasagne recipe - BBC Food</a></p>
+    <header>
+        <a href="../index.html">Return to all recipes</a>
+    </header>
+    <div class="grid-2-col">
+        <div class="flex-col">
+            <h1>Lasagne</h1>
+            <img src="https://ichef.bbci.co.uk/food/ic/food_16x9_1600/recipes/mary_berrys_lasagne_al_16923_16x9.jpg" alt="A photograph of Lasagne">
+        </div>
+        <div class="flex-col">
+            <div>
+                <h2>Description</h2>
+                <p>This is Mary's classic lasagne recipe which has been perfected over the years. For the best results leave the lasagne to stand for six hours before cooking.</p>
+            </div>
+        </div>
+
+        <section>
+            <h2>Ingredients</h2>
+                <h3>For the ragu</h3>
+                    <ul>
+                        <li>2 tbsp olive oil</li>
+                        <li>900g/2lb beef mince</li>
+                        <li>2 onions, roughly chopped</li>
+                        <li>4 sticks celery, diced (optional)</li>
+                        <li>2 garlic cloves, crushed</li>
+                        <li>2 level tbsp plain flour</li>
+                        <li>150ml/¼ pint beef stock</li>
+                        <li>1 tbsp redcurrant jelly (optional) or 1 tsp caster sugar</li>
+                        <li>3 tbsp tomato purée</li>
+                        <li>1 tbsp chopped thyme</li>
+                        <li>2 x 400g tins chopped tomatoes</li>
+                    </ul>
+                <h3>For the white sauce</h3>
+                    <ul>
+                        <li>50g/2oz butter</li>
+                        <li>50g/2oz plain flour</li>
+                        <li>750ml/1¼ pints hot milk</li>
+                        <li>2 tsp Dijon mustard</li>
+                        <li>50g/2oz Parmesan, finely grated</li>
+                        <li>salt and freshly ground black pepper</li>
+                    </ul>
+                <h3>For the lasagne</h3>
+                    <ul>
+                        <li>12 lasagne sheets</li>
+                        <li>75g/3oz mature cheddar, grated</li>
+                    </ul>
+        </section>
+        <section>
+            <h2>Method</h2>
+            <ol>
+                <li>Preheat the oven to160C/140C Fan/Gas 3.</li>
+                <li>For the ragu, heat a large frying pan until hot and add the oil. Cook the mince until browned all over. Remove from the heat and transfer to a plate.</li>
+                <li>Add the onion, celery (if using) and garlic to the pan and cook until softened. Return the meat to the pan and stir in the flour. Add the stock and bring to the boil. Add the redcurrant jelly (or sugar), tomato purée and thyme, then stir well.</li>
+                <li>Stir in the tinned tomatoes. Bring to the boil again, cover and simmer in the oven for 1–½ hours, or until the beef is tender.</li>
+                <li>For the white sauce, melt the butter in a saucepan. Add the flour and cook over the heat for one minute. Gradually whisk in the hot milk, whisking until thickened. Add the Dijon mustard and parmesan cheese and season well with salt and pepper.</li>
+                <li>For the lasagne, put one third of the meat sauce in the base of a 2.3 litre/4 pint shallow ovenproof dish. Spoon one third of the white sauce on top. Season with salt and pepper. Arrange one layer of lasagne sheets on top.</li>
+                <li>Spoon half of the remaining meat sauce on top and then half of the white sauce. Season with salt and pepper. Put another layer of lasagne sheets on top, then the remaining meat sauce and remaining white sauce. Sprinkle over the cheddar.</li>
+                <li>Leave for 6 hours before cooking so that the pasta can start to soften.</li>
+                <li>Preheat the oven to 200C/180C Fan/Gas 6.</li>
+                <li>Cook in the middle of the oven for about 45 minutes – or until golden brown on top, bubbling around the edges and the pasta is soft.</li>
+            </ol>
+        </section>
+        </div>
+        <div>
+            <p><em>Source:</em> <a href="https://www.bbc.co.uk/food/recipes/mary_berrys_lasagne_al_16923" target="_blank" rel="noreferrer">Mary Berry’s lasagne recipe - BBC Food</a></p>
+        </div>
+    </div>
 </body>
 </html>
